Sidebar clicking on small section bug fix (#1605)
* fix sidebar bug clicking on small sections messes up sidebar

* add gradient header

--- a/packages/modelviewer.dev/styles/docs.css
+++ b/packages/modelviewer.dev/styles/docs.css
@@ -81,6 +81,7 @@ hr.solid {
 .tab {
   display: flex;
   align-items: center;
+  padding-right: 10px;
 }
 
 .categories {
@@ -188,19 +189,12 @@ hr.solid {
     max-width: 100%;
   }
 
-  .value-table {
-    width: 100%;
-    margin: 0 0 30px 0;
+  .inner-content {
+    padding: 10px 10px;
   }
 
-  .attribute-definition,
-  .cssPropertie-definition,
-  .propertie-definition,
-  .staticPropertie-definition,
-  .method-definition,
-  .staticMethod-definition,
-  .event-definition,
-  .slot-definition {
-    margin: 0 0 20px 0;
+  .value-table {
+    width: calc(100% - 20px);
+    margin: 0 0 30px 20px;
   }
 }
